--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="" type="image/x-icon">
-     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-     <title>Login-form</title>
-        
+     <link rel="shortcut icon" href="icon/icon-login.png" type="image/x-icon">
+     <link rel="stylesheet" href="style.css">
+     <title>Login-form</title>          
 </head>
 <body>
-    
+  <header>
+    <section class="section-1">
+        <h1 class="h1">Hi ! I AM SAIMUN </h1>
+        <form action="login, ">
+        <div class="email">
+           <h5>ENTER YOUR EMAIL</h5>
+            <input type="email"  id="exampleDropdownFormEmail1" placeholder="Enter your email" required >
+        </div>
+        <div  class=" password">
+            <h5>ENTER YOUR PASSWORD</h5>
+            <input type="password"  name="" id="" placeholder=" your password" required>
+        </div>
+         <div  class="submit">
+            <H5>CLICK-ME</H5>
+            <input type="submit"  value="login" required>
+        </div>
+       </form> 
+    </section>
+  </header>
 </body>
 </html>
