image and login form and all item commit

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <header>
+    <!---section-1-->
     <section class="section-1">
         <h1 class="h1">Hi ! I AM SAIMUN </h1>
         <form action="login, ">
@@ -24,9 +25,20 @@
          <div  class="submit">
             <H5>CLICK-ME</H5>
             <input type="submit"  value="login" required>
+           
+          
         </div>
        </form> 
     </section>
+    <!---section  2-->
+       <div>
+        <h1 class="image-detel-text" >priverse your ago history</h1>
+         <div>
+          <img class="image, images " src="icon/Screenshot_4.png" alt="loding image" >
+          <img class="image" src="icon/Screenshot_2.png" alt="loding image" >
+           <img class="image" src="icon/Screenshot_2.png" alt="loding image" >
+         </div>
+        </div>
   </header>
 </body>
 </html>
